kubernetes/kube-prod-d1/anisonarr/prod-d1/anisonarr-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: anisonarr-ingress
  namespace: anisonarr
  labels:
    app.kubernetes.io/name: anisonarr
    app.kubernetes.io/component: networking
    app.kubernetes.io/instance: anisonarr-prod-d1
    app.kubernetes.io/managed-by: argocd
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-clusterissuer
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    description: "Ingress for Anisonarr application, routing traffic to the Anisonarr web service."
spec:
  rules:
    - host: anisonarr.kube-prod-d1.mclacken.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: anisonarr-web-service
                port:
                  name: http
  tls:
    - hosts:
        - anisonarr.kube-prod-d1.mclacken.net
      secretName: anisonarr-certificate-secret
